Comment scenario 1 dan menambahkan task cucumber untuk github actions

--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,20 @@ configurations {
         extendsFrom testImplementation
     }
 }
+
+task cucumber() {
+    description("Running Cucumber Test")
+    dependsOn assemble, compileTestJava
+    doLast {
+        javaexec {
+            main = "io.cucumber.core.cli.Main"
+            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
+            args = [
+                    '--plugin', 'html:reports/test-report.html',
+                    '--plugin', 'pretty',
+                    '--glue', 'stepDef',
+                    'src/test/resources'
+            ]
+        }
+    }
+}
